--- a/public/style.css
+++ b/public/style.css
@@ -2,19 +2,9 @@ h1 {
     color: red;
 }
 
-#scroll-container {
+p {
     color: black;
-    border: none;
-    border-radius: 5px;
-    overflow: hidden;
-}
-
-#scroll-text {
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-
-    -moz-animation: my-animation 15s linear infinite;
-    -webkit-animation: my-animation 15s linear infinite;
-    animation: my-animation 15s linear infinite;
+    background-color: yellow;
+    font-size: 18px;
+    margin-right: 600px;
 }
